<resources>
    <string name="app_name">The Weather App</string>
    <string name="unsuccesMes">may Be here you get temperature in Orenburg</string>
    <string name="get_weather_by_latitude">Change city</string>
    <string name="get_weather_by_town_name">Get weather by town name</string>
    <string name="error_city">Error in name of city, try again</string>
    <string name="is_it_rainy_today">Is it rainy today?</string>
    <string name="my_location">My location</string>
    <string name="enter_city">Enter city</string>
    <string name="textview">TextView</string>
    <string name="defCityName">Moscow</string>
    <string name="toMuchClicks">Too much clicks</string>
    <string name="noWeekData">No week data</string>
    <string name="noDayData">No day data</string>
    <string name="noPermission">No permission granted</string>
    <string name="another">Another</string>
    <string name="errorTryAgain">Error, check all and try again</string>
    <string name="at_the_week">At the Week</string>
    <string name="to_day">To Day</string>
    <string-array name="cityNames">
        <item>Moscow</item>
        <item>Dubrovitsy</item>
        <item>Miami</item>
        <item>Oldenburg</item>
        <item>Orenburg</item>
        <item>Another</item>
    </string-array>
</resources>